// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden-baseline: status/next JSON characterization > golden: initial 项目含 phase-1 产物 — status 1`] = `
{
  "active_change": null,
  "active_proposals": [],
  "all_done": false,
  "current_phase": "phase.2",
  "lifecycle": "initial",
  "locale": "en",
  "phases": [
    {
      "done": true,
      "files": [
        "core-01-requirements.md",
      ],
      "key": "phase.1",
      "label": "Phase 1 · Requirements (WHY)",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.2",
      "label": "Phase 2 · Product Design (WHAT)",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-0",
      "label": "Phase 3-0 · Architecture",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-1",
      "label": "Phase 3-1 · Scenario Modeling",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-2-api",
      "label": "Phase 3-2 · API Design",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-2-db",
      "label": "Phase 3-2 · Database Design",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-3-deployment",
      "label": "Phase 3-3 · Deployment Plan",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-4a",
      "label": "Phase 3-4a · Test Case Design (Unit + Scenario)",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-4b",
      "label": "Phase 3-4b · API Orchestration Tests",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-5",
      "label": "Phase 3-5 · Code Implementation",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-6",
      "label": "Phase 3-6 · Test Acceptance (verify)",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-7-deploy",
      "label": "Phase 3-7 · Deployment Execution",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-8-smoke",
      "label": "Phase 3-8 · Deployment Smoke Test",
      "skipped": false,
    },
  ],
  "proposal_step": null,
  "source_roots": null,
  "suggestion": "Tell AI: "Do product design based on requirements"",
  "yaml_diagnostics": null,
}
`;

exports[`golden-baseline: status/next JSON characterization > golden: initial-adopted 项目 — status 1`] = `
{
  "active_change": null,
  "active_proposals": [],
  "all_done": false,
  "current_phase": "phase.3-1",
  "lifecycle": "initial",
  "locale": "en",
  "modules": [
    {
      "active_change": null,
      "bootstrap": "adopted",
      "current_phase": "phase.3-1",
      "current_phase_label": "Phase 3-1 · Scenario Modeling",
      "id": "core",
      "lifecycle": "initial",
      "name": "core",
      "phase_progress": {
        "phase.1": {
          "done": false,
          "skip_reason": "bootstrap-adopted",
          "skipped": true,
        },
        "phase.2": {
          "done": false,
          "skip_reason": "bootstrap-adopted",
          "skipped": true,
        },
        "phase.3-0": {
          "done": false,
          "skip_reason": "bootstrap-adopted",
          "skipped": true,
        },
        "phase.3-1": {
          "done": false,
          "scenario_coverage": {
            "covered": 0,
            "missing": [],
            "total": 0,
          },
          "skipped": false,
        },
        "phase.3-2-api": {
          "done": false,
          "skipped": false,
        },
        "phase.3-2-db": {
          "done": false,
          "skipped": false,
        },
        "phase.3-3-deployment": {
          "done": false,
          "skipped": false,
        },
        "phase.3-4a": {
          "done": false,
          "scenario_coverage": {
            "covered": 0,
            "missing": [],
            "total": 0,
          },
          "skipped": false,
        },
        "phase.3-4b": {
          "done": false,
          "skipped": false,
        },
        "phase.3-5": {
          "done": false,
          "skipped": false,
        },
        "phase.3-6": {
          "done": false,
          "skipped": false,
        },
        "phase.3-7-deploy": {
          "done": false,
          "skipped": false,
        },
        "phase.3-8-smoke": {
          "done": false,
          "skipped": false,
        },
      },
      "suggestion": "Tell AI: "Help me draw S01 sequence diagram"",
    },
  ],
  "phases": [
    {
      "done": false,
      "files": [],
      "key": "phase.1",
      "label": "Phase 1 · Requirements (WHY)",
      "skipped": true,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.2",
      "label": "Phase 2 · Product Design (WHAT)",
      "skipped": true,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-0",
      "label": "Phase 3-0 · Architecture",
      "skipped": true,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-1",
      "label": "Phase 3-1 · Scenario Modeling",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-2-api",
      "label": "Phase 3-2 · API Design",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-2-db",
      "label": "Phase 3-2 · Database Design",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-3-deployment",
      "label": "Phase 3-3 · Deployment Plan",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-4a",
      "label": "Phase 3-4a · Test Case Design (Unit + Scenario)",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-4b",
      "label": "Phase 3-4b · API Orchestration Tests",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-5",
      "label": "Phase 3-5 · Code Implementation",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-6",
      "label": "Phase 3-6 · Test Acceptance (verify)",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-7-deploy",
      "label": "Phase 3-7 · Deployment Execution",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-8-smoke",
      "label": "Phase 3-8 · Deployment Smoke Test",
      "skipped": false,
    },
  ],
  "proposal_step": null,
  "source_roots": null,
  "suggestion": "Fill in baseline docs first (openlogos change add-baseline-docs)",
  "yaml_diagnostics": null,
}
`;

exports[`golden-baseline: status/next JSON characterization > golden: launched + ready-to-merge 提案（delta 全勾）— status 1`] = `
{
  "active_change": null,
  "active_proposals": [
    {
      "delta_count": 0,
      "has_proposal": true,
      "has_tasks": true,
      "name": "feat",
    },
  ],
  "all_done": false,
  "current_phase": "phase.1",
  "lifecycle": "launched",
  "locale": "en",
  "modules": [
    {
      "active_change": null,
      "bootstrap": "normal",
      "current_phase": null,
      "current_phase_label": null,
      "id": "core",
      "lifecycle": "launched",
      "name": "core",
      "phase_progress": null,
      "suggestion": "Run openlogos change <slug> to create a new change proposal",
    },
  ],
  "phases": [
    {
      "done": false,
      "files": [],
      "key": "phase.1",
      "label": "Phase 1 · Requirements (WHY)",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.2",
      "label": "Phase 2 · Product Design (WHAT)",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-0",
      "label": "Phase 3-0 · Architecture",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-1",
      "label": "Phase 3-1 · Scenario Modeling",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-2-api",
      "label": "Phase 3-2 · API Design",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-2-db",
      "label": "Phase 3-2 · Database Design",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-3-deployment",
      "label": "Phase 3-3 · Deployment Plan",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-4a",
      "label": "Phase 3-4a · Test Case Design (Unit + Scenario)",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-4b",
      "label": "Phase 3-4b · API Orchestration Tests",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-5",
      "label": "Phase 3-5 · Code Implementation",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-6",
      "label": "Phase 3-6 · Test Acceptance (verify)",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-7-deploy",
      "label": "Phase 3-7 · Deployment Execution",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-8-smoke",
      "label": "Phase 3-8 · Deployment Smoke Test",
      "skipped": false,
    },
  ],
  "proposal_step": null,
  "source_roots": null,
  "suggestion": "Tell AI: "Help me write requirements"",
  "yaml_diagnostics": null,
}
`;

exports[`golden-baseline: status/next JSON characterization > golden: launched + 纯代码提案（无 [delta]）— status 1`] = `
{
  "active_change": null,
  "active_proposals": [
    {
      "delta_count": 0,
      "has_proposal": true,
      "has_tasks": true,
      "name": "codeonly",
    },
  ],
  "all_done": false,
  "current_phase": "phase.1",
  "lifecycle": "launched",
  "locale": "en",
  "modules": [
    {
      "active_change": null,
      "bootstrap": "normal",
      "current_phase": null,
      "current_phase_label": null,
      "id": "core",
      "lifecycle": "launched",
      "name": "core",
      "phase_progress": null,
      "suggestion": "Run openlogos change <slug> to create a new change proposal",
    },
  ],
  "phases": [
    {
      "done": false,
      "files": [],
      "key": "phase.1",
      "label": "Phase 1 · Requirements (WHY)",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.2",
      "label": "Phase 2 · Product Design (WHAT)",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-0",
      "label": "Phase 3-0 · Architecture",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-1",
      "label": "Phase 3-1 · Scenario Modeling",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-2-api",
      "label": "Phase 3-2 · API Design",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-2-db",
      "label": "Phase 3-2 · Database Design",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-3-deployment",
      "label": "Phase 3-3 · Deployment Plan",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-4a",
      "label": "Phase 3-4a · Test Case Design (Unit + Scenario)",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-4b",
      "label": "Phase 3-4b · API Orchestration Tests",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-5",
      "label": "Phase 3-5 · Code Implementation",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-6",
      "label": "Phase 3-6 · Test Acceptance (verify)",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-7-deploy",
      "label": "Phase 3-7 · Deployment Execution",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-8-smoke",
      "label": "Phase 3-8 · Deployment Smoke Test",
      "skipped": false,
    },
  ],
  "proposal_step": null,
  "source_roots": null,
  "suggestion": "Tell AI: "Help me write requirements"",
  "yaml_diagnostics": null,
}
`;

exports[`golden-baseline: status/next JSON characterization > golden: launched 模块 + delta-writing 提案 — next 1`] = `
{
  "action": "Create a change proposal before modifying any code",
  "active_change": null,
  "command": "openlogos change <slug>",
  "detail": "Run \`openlogos change <slug>\` to create a new change proposal and activate the guard.",
  "modules": [
    {
      "action": "Create a change proposal before modifying any code",
      "active_change": null,
      "bootstrap": "normal",
      "command": "openlogos change <slug>",
      "detail": "Run openlogos change <slug> to create a new change proposal",
      "id": "core",
      "lifecycle": "launched",
      "name": "core",
      "proposal_step": null,
    },
  ],
  "proposal_step": null,
}
`;

exports[`golden-baseline: status/next JSON characterization > golden: launched 模块 + delta-writing 提案 — status 1`] = `
{
  "active_change": null,
  "active_proposals": [
    {
      "delta_count": 0,
      "has_proposal": true,
      "has_tasks": true,
      "name": "feat",
    },
  ],
  "all_done": false,
  "current_phase": "phase.1",
  "lifecycle": "launched",
  "locale": "en",
  "modules": [
    {
      "active_change": null,
      "bootstrap": "normal",
      "current_phase": null,
      "current_phase_label": null,
      "id": "core",
      "lifecycle": "launched",
      "name": "core",
      "phase_progress": null,
      "suggestion": "Run openlogos change <slug> to create a new change proposal",
    },
  ],
  "phases": [
    {
      "done": false,
      "files": [],
      "key": "phase.1",
      "label": "Phase 1 · Requirements (WHY)",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.2",
      "label": "Phase 2 · Product Design (WHAT)",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-0",
      "label": "Phase 3-0 · Architecture",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-1",
      "label": "Phase 3-1 · Scenario Modeling",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-2-api",
      "label": "Phase 3-2 · API Design",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-2-db",
      "label": "Phase 3-2 · Database Design",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-3-deployment",
      "label": "Phase 3-3 · Deployment Plan",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-4a",
      "label": "Phase 3-4a · Test Case Design (Unit + Scenario)",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-4b",
      "label": "Phase 3-4b · API Orchestration Tests",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-5",
      "label": "Phase 3-5 · Code Implementation",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-6",
      "label": "Phase 3-6 · Test Acceptance (verify)",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-7-deploy",
      "label": "Phase 3-7 · Deployment Execution",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-8-smoke",
      "label": "Phase 3-8 · Deployment Smoke Test",
      "skipped": false,
    },
  ],
  "proposal_step": null,
  "source_roots": null,
  "suggestion": "Tell AI: "Help me write requirements"",
  "yaml_diagnostics": null,
}
`;

exports[`golden-baseline: status/next JSON characterization > golden: launched 模块无活跃提案 — status 1`] = `
{
  "active_change": null,
  "active_proposals": [],
  "all_done": false,
  "current_phase": "phase.1",
  "lifecycle": "launched",
  "locale": "en",
  "modules": [
    {
      "active_change": null,
      "bootstrap": "normal",
      "current_phase": null,
      "current_phase_label": null,
      "id": "core",
      "lifecycle": "launched",
      "name": "core",
      "phase_progress": null,
      "suggestion": "Run openlogos change <slug> to create a new change proposal",
    },
  ],
  "phases": [
    {
      "done": false,
      "files": [],
      "key": "phase.1",
      "label": "Phase 1 · Requirements (WHY)",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.2",
      "label": "Phase 2 · Product Design (WHAT)",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-0",
      "label": "Phase 3-0 · Architecture",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-1",
      "label": "Phase 3-1 · Scenario Modeling",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-2-api",
      "label": "Phase 3-2 · API Design",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-2-db",
      "label": "Phase 3-2 · Database Design",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-3-deployment",
      "label": "Phase 3-3 · Deployment Plan",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-4a",
      "label": "Phase 3-4a · Test Case Design (Unit + Scenario)",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-4b",
      "label": "Phase 3-4b · API Orchestration Tests",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-5",
      "label": "Phase 3-5 · Code Implementation",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-6",
      "label": "Phase 3-6 · Test Acceptance (verify)",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-7-deploy",
      "label": "Phase 3-7 · Deployment Execution",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-8-smoke",
      "label": "Phase 3-8 · Deployment Smoke Test",
      "skipped": false,
    },
  ],
  "proposal_step": null,
  "source_roots": null,
  "suggestion": "Tell AI: "Help me write requirements"",
  "yaml_diagnostics": null,
}
`;

exports[`golden-baseline: status/next JSON characterization > golden: 全新 initial 项目 — next 1`] = `
{
  "action": "Tell AI: "Help me write requirements"",
  "active_change": null,
  "command": null,
  "detail": "Current phase: phase.1",
  "proposal_step": null,
}
`;

exports[`golden-baseline: status/next JSON characterization > golden: 全新 initial 项目 — status 1`] = `
{
  "active_change": null,
  "active_proposals": [],
  "all_done": false,
  "current_phase": "phase.1",
  "lifecycle": "initial",
  "locale": "en",
  "phases": [
    {
      "done": false,
      "files": [],
      "key": "phase.1",
      "label": "Phase 1 · Requirements (WHY)",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.2",
      "label": "Phase 2 · Product Design (WHAT)",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-0",
      "label": "Phase 3-0 · Architecture",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-1",
      "label": "Phase 3-1 · Scenario Modeling",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-2-api",
      "label": "Phase 3-2 · API Design",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-2-db",
      "label": "Phase 3-2 · Database Design",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-3-deployment",
      "label": "Phase 3-3 · Deployment Plan",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-4a",
      "label": "Phase 3-4a · Test Case Design (Unit + Scenario)",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-4b",
      "label": "Phase 3-4b · API Orchestration Tests",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-5",
      "label": "Phase 3-5 · Code Implementation",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-6",
      "label": "Phase 3-6 · Test Acceptance (verify)",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-7-deploy",
      "label": "Phase 3-7 · Deployment Execution",
      "skipped": false,
    },
    {
      "done": false,
      "files": [],
      "key": "phase.3-8-smoke",
      "label": "Phase 3-8 · Deployment Smoke Test",
      "skipped": false,
    },
  ],
  "proposal_step": null,
  "source_roots": null,
  "suggestion": "Tell AI: "Help me write requirements"",
  "yaml_diagnostics": null,
}
`;
